Fixing up the readme

--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 # Tsunami Generator
-## A program for sending large amounts of messages on Skype
+*A program for sending large amounts of messages on Skype*
 
+Made with Visual Studio 2013 Professional for .NET 4.5.
 The idea for this program was conceived after some fooling around with Skype4COM.dll (which is, unfortunately getting phased out) and using it to repeatedly send messages. It is this simple.
 
 ###Used libraries:
@@ -15,4 +16,4 @@ This program is licensed under the BSD 2-Clause License. See LICENSE for its ful
 This program currently supports the English and Czech languages. The support for localization is done through .resx files (found in the Languages folder of the project) and a list of supported languages is hardcoded at the beginning of SettingsWindow.xaml.cs in *string[,] langs*.
 
 ###Binaries:
-A zip archive with compiled binaries can be found in the bin folder of this repository.
+A zip archive with compiled binaries can be found in the binaries folder of this repository.
